language/move-lang/tests/move_check/parser/less_than_space.exp
error: 

   ┌── tests/move_check/parser/less_than_space.move:5:18 ───
   │
 5 │         if (v< 10) return v;
   │                  ^ Unexpected ')'
   ·
 5 │         if (v< 10) return v;
   │                -- Expected '::' after an address in a module identifier
   ·
 5 │         if (v< 10) return v;
   │              - Perhaps you need a blank space before this '<' operator?
   │

